新增： +sa-token框架 +全局字符集配置 +获取当前登录用户的ID方法 +用户登出处理方法 +通过令牌值注销用户 +通过token获取登录用户ID +获取指定token的超时时间 +查询当前所有已登录用户 +部分方法的注释
删除：
-去掉swagger

修改：
*现在服务器在生成加密密钥之前会删除掉之前的密钥，节省空间，方便管理
*将原始JWT替换为sa-token框架