@@ -10,6 +10,7 @@ import org.springframework.stereotype.Component;
 
 import java.io.*;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 
@@ -22,12 +23,12 @@ public class ErnieBotTurbo {
         String access_token = new ErnieBotTurbo().getWenxinToken();
         //2、访问数据
         String requestMethod = "POST";
-        URLEncoder.encode("junshi", "UTF-8");
+        URLEncoder.encode("junshi", StandardCharsets.UTF_8);
         String url = "https://aip.baidubce.com/rpc/2.0/ai_custom/v1/wenxinworkshop/chat/eb-instant?access_token="+access_token;//post请求时格式
         //测试：访问聚合数据的地区新闻api
         HashMap<String, String> msg = new HashMap<>();
         msg.put("role","user");
-        msg.put("content", "你是一个拥有深度电商经验和专业知识的人员，现在我需要你为我提供5个"+prompt+"的淘宝同款商品标题，标题关键词应该尽可能多的展示此产品，你只需要回复生成的标题，不需要多余回复，标题应该包含以下几点：产品名称、关键属性、产品亮点/卖点、品牌名、调性词，请记住生成的每个标题必须要20字符上下，这点很重要，也应该吸引人，同时也应遵守淘宝的相关规则和指导原则。");
+        msg.put("content", "你是一个拥有深度电商经验和专业知识的人员，现在我需要你为我提供5个"+prompt+"的淘宝同款商品标题，标题关键词应该尽可能多的展示此产品，你只需要回复生成的标题，不需要多余回复，标题应该包含以下几点：产品名称、关键属性、产品亮点/卖点、品牌名、调性词，请记住生成的每个标题必须要40字符上下，这点很重要，也应该吸引人，同时也应遵守淘宝的相关规则和指导原则。");
         ArrayList<HashMap> messages = new ArrayList<>();
         messages.add(msg);
         HashMap<String, Object> requestBody = new HashMap<>();
